frontend/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container {
  width: 100%;
  padding: 20px;
  display: flex;
  justify-content: center;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin-top: 20px;
  font-family: Arial, sans-serif;
}

th, td {
  border: 1px solid #ddd;
  /* padding: 15px; */
  text-align: center;
}

th {
  background-color: #f4f4f4;
  font-weight: bold;
}

td {
  height: 10px;
  width: 12vw;
  background-color: #fff;
  vertical-align: middle;
  font-size: 14px;
}

tr td {
  background-color: #f9f9f9;  /* Alternate row color */
  border: 2px solid transparent;
}

td:hover {
  background-color: #e0e0e0;
}

thead th {
  font-size: 16px;
  background-color: #4CAF50;
  color: white;
}

td {
  cursor: pointer;
}

td:empty {
  background-color: #f0f0f0;
}

.tooltip-trigger {
  position: relative; /* Ensure the tooltip is positioned relative to the parent */
}

.tooltip {
  display: none; /* Hidden by default */
  position: absolute;
  background-color: #333;
  color: #fff;
  padding: 5px;
  border-radius: 5px;
  top: 100%; /* Position below the cell */
  left: 50%; /* Center horizontally */
  transform: translateX(-50%);
  white-space: nowrap; /* Prevent text wrapping */
  z-index: 1000;
}

.tooltip-trigger:hover .tooltip {
  display: block; /* Show tooltip on hover */
}

